# DevOps-Education

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  build.sh  docker_build.sh
.github/workflows/: workflow.yml
include/: arith.hpp
src/: CMakeLists.txt  arith.cpp
tests/: CMakeLists.txt  tests.cpp
